apps/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nextcloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  rules:
    - host: nextcloud.zxyxyhome.duckdns.org
      http:
        paths:
          - backend:
              service:
                name: nextcloud
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:23.0.12-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nextcloud-pvc
